// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagement Report Reducer when failed to get chart data 1`] = `
Object {
  "aggregateMetrics": Object {
    "data": Array [],
    "error": Object {
      "message": "Oh no!",
    },
    "loading": false,
  },
  "linkMetrics": Object {
    "data": Array [],
    "error": null,
    "loading": false,
  },
}
`;

exports[`Engagement Report Reducer when failed to get table data 1`] = `
Object {
  "aggregateMetrics": Object {
    "data": Object {},
    "error": null,
    "loading": false,
  },
  "linkMetrics": Object {
    "data": Array [],
    "error": Object {
      "message": "Oh no!",
    },
    "loading": false,
  },
}
`;

exports[`Engagement Report Reducer when pending to get chart data 1`] = `
Object {
  "aggregateMetrics": Object {
    "data": Object {},
    "error": null,
    "loading": true,
  },
  "linkMetrics": Object {
    "data": Array [],
    "error": null,
    "loading": false,
  },
}
`;

exports[`Engagement Report Reducer when pending to get table data 1`] = `
Object {
  "aggregateMetrics": Object {
    "data": Object {},
    "error": null,
    "loading": false,
  },
  "linkMetrics": Object {
    "data": Array [],
    "error": null,
    "loading": true,
  },
}
`;

exports[`Engagement Report Reducer when succeeds to get chart data 1`] = `
Object {
  "aggregateMetrics": Object {
    "data": Object {
      "count_accepted": 237433,
      "count_targeted": 272234,
    },
    "error": null,
    "loading": false,
  },
  "linkMetrics": Object {
    "data": Array [],
    "error": null,
    "loading": false,
  },
}
`;

exports[`Engagement Report Reducer when succeeds to get table data 1`] = `
Object {
  "aggregateMetrics": Object {
    "data": Object {},
    "error": null,
    "loading": false,
  },
  "linkMetrics": Object {
    "data": Array [
      Object {
        "count_clicked": 1802,
        "count_raw_clicked_approx": 1692,
        "link_name": "Raw URL",
      },
      Object {
        "count_clicked": 1402,
        "count_raw_clicked_approx": 1020,
        "link_name": "Nintendo",
      },
    ],
    "error": null,
    "loading": false,
  },
}
`;
